# multi_chatbot

./: .env.example  .gitignore  LICENSE  README.md  install.sh  main.py  pyproject.toml  setup-nix.sh  shell.nix
api/: __init__.py  chat.py  chatbots.py  rag.py
config/: __init__.py  settings.py
scripts/: load_test.py  monitor_system.py  simple_load_test.py
src/: __init__.py  chatbot_manager.py  document_loader.py  llm_manager.py  vector_store.py
ui/: __init__.py
ui/static/css/: styles.css
ui/static/js/: chat_selection.js
ui/templates/: chat_interface.html  chat_selection.html  embed.html  error.html  rag_settings.html
